# cubos-demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix
airships/: CMakeLists.txt
airships/assets/bindings/: debugcam.bind  player1.bind  playern.bind
airships/assets/scenes/: car.cubos  game.cubos  island.cubos  island2.cubos  island3.cubos  player.cubos  server.cubos
airships/assets/shaders/: rope.fs  rope.vs
airships/assets/voxels/: ilha3.qb  main.pal  pal1.pal
airships/client/: CMakeLists.txt  emscripten.html
airships/client/src/: dummy.cpp  main.cpp
airships/common/: CMakeLists.txt
airships/common/src/: empty.cpp
airships/server/: CMakeLists.txt
airships/server/src/: main.cpp
azul/: CMakeLists.txt
azul/assets/bindings/: player1.bind  player2.bind  playern.bind
azul/assets/scenes/: arrows.cubos  intro.cubos  main.cubos  player.cubos  water.cubos
azul/assets/voxels/: main.pal
azul/src/: main.cpp
azul/src/animation/: plugin.cpp  plugin.hpp
azul/src/audio/: plugin.cpp  plugin.hpp
azul/src/bullet/: plugin.cpp
azul/src/camera_controller/: plugin.cpp  plugin.hpp
azul/src/coordinator/: plugin.cpp  plugin.hpp
azul/src/destroy_tree/: plugin.cpp  plugin.hpp
azul/src/health/: plugin.cpp  plugin.hpp
azul/src/level/: plugin.cpp
azul/src/numerals/: plugin.hpp
azul/src/player_controller/: plugin.cpp  plugin.hpp
azul/src/player_movement/: plugin.cpp  plugin.hpp
azul/src/player_spawner/: plugin.cpp  plugin.hpp
azul/src/random_grid/: plugin.cpp  plugin.hpp
azul/src/restart/: plugin.cpp  plugin.hpp
azul/src/rotating_animation/: plugin.cpp  plugin.hpp
azul/src/sailor_death/: plugin.cpp  plugin.hpp
azul/src/score_indicator/: plugin.hpp
azul/src/scoreboard/: plugin.cpp
azul/src/tile_map/: plugin.cpp  plugin.hpp
azul/src/tile_map_generator/: plugin.cpp  plugin.hpp
azul/src/waves/: plugin.cpp  plugin.hpp
azul/src/waves_animator/: plugin.cpp  plugin.hpp
cars/: CMakeLists.txt  emscripten.html  follow.cpp
cars/assets/: particle.grd  scene.cubos
cars/assets/bindings/: debug.bind  editor.bind  player1.bind  player2.bind
cars/assets/scenes/: car.cubos  main.cubos  particle.cubos
cars/assets/voxels/: main.pal  particle.grd  particle.qb
cars/src/: explosion.hpp  main.cpp
cars/src/car/: car.cpp  car.hpp  plugin.cpp  plugin.hpp
cars/src/day_night/: plugin.cpp  plugin.hpp
cars/src/dead/: dead.cpp  dead.hpp  plugin.cpp  plugin.hpp
cars/src/explosion/: explosion.cpp  explosion.hpp  particle.cpp  particle.hpp  plugin.cpp  plugin.hpp
cars/src/race/: checkpoint.cpp  checkpoint.hpp  obstacle.cpp  obstacle.hpp  plugin.cpp  plugin.hpp  racer.cpp  racer.hpp
coffee/: CMakeLists.txt  emscripten.html
coffee/assets/bindings/: player1.bind  player2.bind  playern.bind
coffee/assets/scenes/: camera.cubos  car.cubos  end.cubos  ground_collider.cubos  instructions.cubos  intro.cubos  main.cubos  main_base.cubos  round_manager.cubos  score_ui.cubos  scoreboard.cubos
coffee/assets/voxels/: main.pal
coffee/src/: main.cpp
coffee/src/blackout/: plugin.cpp  plugin.hpp
coffee/src/car/: plugin.cpp  plugin.hpp
coffee/src/day_night/: plugin.cpp  plugin.hpp
coffee/src/follow/: plugin.cpp  plugin.hpp
coffee/src/hover_animation/: plugin.cpp  plugin.hpp
coffee/src/interpolation/: plugin.cpp  plugin.hpp
coffee/src/map/: plugin.cpp  plugin.hpp
coffee/src/map_generator/: plugin.cpp  plugin.hpp
coffee/src/player_spawner/: plugin.cpp  plugin.hpp
coffee/src/progression/: plugin.cpp  plugin.hpp
coffee/src/round_manager/: plugin.cpp  plugin.hpp
coffee/src/score/: plugin.cpp  plugin.hpp
coffee/src/spawn_orphan/: plugin.cpp  plugin.hpp
coffee/src/toilet_paper/: plugin.cpp  plugin.hpp
coffee/src/ui_effects/: plugin.cpp  plugin.hpp
coffee_jam/: CMakeLists.txt
coffee_jam/assets/bindings/: player1.bind  player2.bind  playern.bind
coffee_jam/assets/scenes/: main.cubos  player.cubos  recipes.cubos
coffee_jam/assets/voxels/: main.pal
coffee_jam/src/: main.cpp
coffee_jam/src/breakable/: plugin.cpp  plugin.hpp
coffee_jam/src/day_night/: plugin.cpp
coffee_jam/src/displays/: plugin.cpp
coffee_jam/src/follow/: plugin.cpp  plugin.hpp
coffee_jam/src/hammer/: plugin.cpp  plugin.hpp
coffee_jam/src/health/: plugin.cpp  plugin.hpp
coffee_jam/src/holdable/: plugin.cpp  plugin.hpp
coffee_jam/src/interaction/: plugin.cpp
coffee_jam/src/object/: plugin.cpp  plugin.hpp
coffee_jam/src/path_finding/: plugin.cpp  plugin.hpp
coffee_jam/src/player_controller/: plugin.cpp  plugin.hpp
coffee_jam/src/player_spawn_point/: plugin.cpp  plugin.hpp
coffee_jam/src/progression/: plugin.hpp
coffee_jam/src/shop/: plugin.cpp
coffee_jam/src/skip/: plugin.cpp  plugin.hpp
coffee_jam/src/tile_map/: plugin.cpp  plugin.hpp
coffee_jam/src/tile_map_generator/: plugin.cpp  plugin.hpp
coffee_jam/src/tiles/: plugin.cpp  plugin.hpp
coffee_jam/src/turret/: plugin.cpp  plugin.hpp
coffee_jam/src/walker/: plugin.cpp  plugin.hpp
coffee_jam/src/waves/: plugin.cpp  plugin.hpp
coffee_jam/src/zombie/: plugin.cpp  plugin.hpp
ondisseia/: CMakeLists.txt  emscripten.html
ondisseia/assets/bindings/: playern.bind
ondisseia/assets/scenes/: arrows.cubos  intro.cubos  level.cubos  sailor.cubos  score.cubos  water.cubos
ondisseia/src/bullet/: plugin.hpp
ondisseia/src/coordinator/: plugin.cpp
ondisseia/src/health/: plugin.hpp
ondisseia/src/level/: plugin.hpp
ondisseia/src/numerals/: plugin.cpp
ondisseia/src/player_controller/: plugin.cpp  plugin.hpp
ondisseia/src/sailor_death/: plugin.cpp  plugin.hpp
ondisseia/src/score_indicator/: plugin.cpp
ondisseia/src/scoreboard/: plugin.hpp
platformer/: CMakeLists.txt  components.hpp  main.cpp  playersPlugin.cpp  playersPlugin.hpp
platformer/assets/: main.pal  player0.bind  player1.bind  scene.cubos
platformer/src/: main.cpp
platformer/src/cannon/: bullet.cpp  (+5 more)
roll_racers/: CMakeLists.txt  emscripten.html
roll_racers/src/: main.cpp
scraps/: CMakeLists.txt  emscripten.html
scraps/src/: main.cpp
tanks/: CMakeLists.txt
tanks/src/: main.cpp  player.hpp
(+1052 files in other folders)
